--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="section-wrapper section-1-wrapper">
             <div class="section-1-heading-wrapper">
               <h1 class="section-1-heading">
-                The best wine across the the world
+                The Best Products Across The World
               </h1>
             </div>
           </div>
@@ -29,7 +29,7 @@
           <div class="section-wrapper section-2-wrapper">
             <div class="sale">
               <img src="/images/bag.png" alt="Sale Bag" class="sale-bag" />
-              <button class="sale-btn">order now</button>
+              <button class="sale-btn">Order Now</button>
             </div>
             <img
               src="/images/wine-bottle.png"
@@ -41,7 +41,7 @@
         <!---------Section-3--------------->
         <section class="section-3">
           <div class="section-wrapper section-3-wrapper">
-            <h1 class="section-3-heading">The Best Quality</h1>
+            <h1 class="section-3-heading">The Best Quality Products</h1>
             <img src="/images/frame.png" alt="Grapes Fram" class="frame-img" />
             <img src="/images/grapes.png" alt="Grapes" class="grapes-img" />
           </div>
@@ -54,7 +54,6 @@
         </section>
       </div>
     </div>
-
     <script src="script.js"></script>
   </body>
 </html>
